--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-	<title></title>
+	<title>stationssamhällen</title>
 	<meta charset="UTF-8"/>
 	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
 	<div class="main">
 	    <div class="top">
+		<h1>God ljudmiljö i stationssamhällen</h1>
+	    </div>
+	    <div class="top">
 		<div class="left">
+		    <a href="http://127.0.0.1:5000/info1"> Information om projektet. </a>
+		    <a href="http://127.0.0.1:5000/info2"> Hur kan verktyget användas? </a>
+		    <a href="http://127.0.0.1:5000/nytta"> Nyttor av bullerdämpande åtgärder. </a>
 		</div>
 		<div class="centre">
 		    <div class="media">
@@ -34,12 +40,12 @@
 		    </div>
 		</div>
 		<div class="right">
-		    <div><h1 id="abat-heading0"></h1></div>
-		    <div><h2 id="abat-heading1"></h2></div>
+		    <div><h2 id="abat-heading0"></h2></div>
+		    <div><h3 id="abat-heading1"></h3></div>
 		    <div id="abat-text1" class="text"></div>
-		    <div><h2 id="abat-heading2"></h2></div>
+		    <div><h3 id="abat-heading2"></h3></div>
 		    <div id="abat-text2" class="text"></div>
-		    <div><h2 id="abat-heading3"></h2></div>
+		    <div><h3 id="abat-heading3"></h3></div>
 		    <div id="abat-text3" class="text"></div>
 		</div>
 	    </div>
